--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -502,6 +502,9 @@
                     </item>
                     <item>
                      <widget class="QDateEdit" name="dateSince">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
                       <property name="dateTime">
                        <datetime>
                         <hour>0</hour>
@@ -526,6 +529,9 @@
                     </item>
                     <item>
                      <widget class="QDateEdit" name="dateUntil">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
                       <property name="dateTime">
                        <datetime>
                         <hour>0</hour>
@@ -577,7 +583,11 @@
                      </widget>
                     </item>
                     <item>
-                     <widget class="QDoubleSpinBox" name="dspbMinSize"/>
+                     <widget class="QDoubleSpinBox" name="dspbMinSize">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
+                     </widget>
                     </item>
                     <item>
                      <widget class="QLabel" name="maxSizeLabel">
@@ -587,10 +597,17 @@
                      </widget>
                     </item>
                     <item>
-                     <widget class="QDoubleSpinBox" name="dspbMaxSize"/>
+                     <widget class="QDoubleSpinBox" name="dspbMaxSize">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
+                     </widget>
                     </item>
                     <item>
                      <widget class="QComboBox" name="cmbSize">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
                       <property name="maximumSize">
                        <size>
                         <width>50</width>
@@ -966,11 +983,73 @@
          <attribute name="title">
           <string>Результаты</string>
          </attribute>
+         <widget class="QListView" name="lstvFoundDuplicates">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>10</y>
+            <width>561</width>
+            <height>231</height>
+           </rect>
+          </property>
+         </widget>
         </widget>
         <widget class="QWidget" name="tabProgress">
          <attribute name="title">
           <string>Прогресс</string>
          </attribute>
+         <widget class="QLabel" name="lblProgress">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>20</y>
+            <width>461</width>
+            <height>21</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Поиск дубликатов файлов</string>
+          </property>
+         </widget>
+         <widget class="QProgressBar" name="prgbFileCount">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>50</y>
+            <width>271</width>
+            <height>23</height>
+           </rect>
+          </property>
+          <property name="value">
+           <number>0</number>
+          </property>
+         </widget>
+         <widget class="QLabel" name="lblTimeElapsed">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>90</y>
+            <width>461</width>
+            <height>16</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Времени прошло: 00:00:00</string>
+          </property>
+         </widget>
+         <widget class="QPushButton" name="btnCancel">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>120</y>
+            <width>75</width>
+            <height>23</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Отмена</string>
+          </property>
+         </widget>
         </widget>
        </widget>
       </item>
