--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1057</width>
+    <width>1341</width>
     <height>744</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -49,7 +49,7 @@
              <bool>true</bool>
             </property>
             <property name="checked">
-             <bool>false</bool>
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -148,13 +148,6 @@
               <number>10</number>
              </property>
              <item>
-              <widget class="QCheckBox" name="chbFNFilename">
-               <property name="text">
-                <string>Одинаковые имена</string>
-               </property>
-              </widget>
-             </item>
-             <item>
               <widget class="QCheckBox" name="chbFNExtension">
                <property name="text">
                 <string>Одинаковое расширение</string>
@@ -184,7 +177,7 @@
              <string>Совпадение SHA-1 HASH</string>
             </property>
             <property name="checked">
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
            </widget>
           </item>
@@ -232,14 +225,14 @@
               </widget>
              </item>
              <item>
-              <widget class="QCheckBox" name="chbHashExtension">
+              <widget class="QCheckBox" name="chbHashFileSize">
                <property name="text">
                 <string>Одинаковый размер</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QCheckBox" name="chbHashFileSize">
+              <widget class="QCheckBox" name="chbHashExtension">
                <property name="text">
                 <string>Одинаковое расширение</string>
                </property>
@@ -253,20 +246,6 @@
               </widget>
              </item>
             </layout>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="rbtFolders">
-            <property name="text">
-             <string>Найти дублирующиеся папки</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="rbtUnique">
-            <property name="text">
-             <string>Найти уникальные файлы</string>
-            </property>
            </widget>
           </item>
           <item>
@@ -299,7 +278,7 @@
               <item row="0" column="0">
                <layout class="QVBoxLayout" name="verticalLayout_5">
                 <item>
-                 <widget class="QListView" name="listView"/>
+                 <widget class="QListView" name="lstAddedDirectories"/>
                 </item>
                 <item>
                  <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -352,8 +331,8 @@
                     </property>
                     <property name="sizeHint" stdset="0">
                      <size>
-                      <width>40</width>
-                      <height>20</height>
+                      <width>0</width>
+                      <height>0</height>
                      </size>
                     </property>
                    </spacer>
@@ -388,8 +367,8 @@
                   </property>
                   <property name="sizeHint" stdset="0">
                    <size>
-                    <width>20</width>
-                    <height>40</height>
+                    <width>0</width>
+                    <height>0</height>
                    </size>
                   </property>
                  </spacer>
@@ -619,17 +598,17 @@
                       </property>
                       <item>
                        <property name="text">
-                        <string>Кб</string>
+                        <string>Kb</string>
                        </property>
                       </item>
                       <item>
                        <property name="text">
-                        <string>Мб</string>
+                        <string>Mb</string>
                        </property>
                       </item>
                       <item>
                        <property name="text">
-                        <string>Гб</string>
+                        <string>Gb</string>
                        </property>
                       </item>
                      </widget>
@@ -683,20 +662,6 @@
                     </property>
                    </widget>
                   </item>
-                  <item>
-                   <widget class="QCheckBox" name="chbFilterSysFolders">
-                    <property name="text">
-                     <string>Защищённые системные папки (рекомендуется)</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <widget class="QCheckBox" name="chbFilterSysFiles">
-                    <property name="text">
-                     <string>Защита системных файлов</string>
-                    </property>
-                   </widget>
-                  </item>
                  </layout>
                 </item>
                 <item>
@@ -730,11 +695,6 @@
              </spacer>
             </item>
            </layout>
-          </widget>
-          <widget class="QWidget" name="tabExclusions">
-           <attribute name="title">
-            <string>Исключения</string>
-           </attribute>
           </widget>
           <widget class="QWidget" name="tabProtect">
            <attribute name="title">
@@ -808,11 +768,6 @@
              </layout>
             </item>
            </layout>
-          </widget>
-          <widget class="QWidget" name="tabPreview">
-           <attribute name="title">
-            <string>Предпросмотр</string>
-           </attribute>
           </widget>
          </widget>
         </item>
@@ -946,30 +901,16 @@
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="clbExport">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>Экспортировать</string>
-          </property>
-          <property name="icon">
-           <iconset resource="resources.qrc">
-            <normaloff>:/icons/export.png</normaloff>:/icons/export.png</iconset>
-          </property>
-         </widget>
-        </item>
-        <item>
          <spacer name="horizontalSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::MinimumExpanding</enum>
+          </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>40</width>
+            <width>0</width>
             <height>0</height>
            </size>
           </property>
@@ -986,16 +927,11 @@
          <attribute name="title">
           <string>Результаты</string>
          </attribute>
-         <widget class="QListView" name="lstvFoundDuplicates">
-          <property name="geometry">
-           <rect>
-            <x>10</x>
-            <y>10</y>
-            <width>561</width>
-            <height>231</height>
-           </rect>
-          </property>
-         </widget>
+         <layout class="QVBoxLayout" name="verticalLayout_7">
+          <item>
+           <widget class="QListView" name="lstvFoundDuplicates"/>
+          </item>
+         </layout>
         </widget>
         <widget class="QWidget" name="tabProgress">
          <attribute name="title">
@@ -1059,43 +995,6 @@
      </layout>
     </item>
    </layout>
-  </widget>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>1057</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="defaultUp">
-    <bool>false</bool>
-   </property>
-   <widget class="QMenu" name="menuFile">
-    <property name="title">
-     <string>Файл</string>
-    </property>
-   </widget>
-   <widget class="QMenu" name="menuAction">
-    <property name="title">
-     <string>Действие</string>
-    </property>
-   </widget>
-   <widget class="QMenu" name="menuView">
-    <property name="title">
-     <string>Вид</string>
-    </property>
-   </widget>
-   <widget class="QMenu" name="menuHelp">
-    <property name="title">
-     <string>Помощь</string>
-    </property>
-   </widget>
-   <addaction name="menuFile"/>
-   <addaction name="menuAction"/>
-   <addaction name="menuView"/>
-   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
